--- a/index.ipynb
+++ b/index.ipynb
@@ -4,26 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Understanding Statistical Errors (TYPE I and II)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SWBATS\n",
+    "# Type 1 and Type 2 errors\n",
     "\n",
-    "* Describe and differentiate between TYPE I and TYPE II errors.\n",
-    "* Understand alpha and beta for representing false positive and false negative values.\n",
-    "* Simulate TYPE I and TYPE II errors with alpha control to observe the output of an experiment. \n",
-    "* Explain why alpha = 0.5 is chosen as a cut off point for rejecting NULL hypothesis in most scientific experiments. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The result of a statistical hypothesis test and the corresponding decision of whether to reject or accept the null hypothesis is not infallible. A test provides evidence for or against the null hypothesis and then you decide whether to accept or reject it based on that evidence, but the evidence may lack the strength to arrive at the correct conclusion. Incorrect conclusions made from hypothesis tests fall in one of two categories, i.e. [Type 1 and Type 2 erros](https://en.wikipedia.org/wiki/Type_I_and_type_II_errors)"
+    "## Introduction\n",
+    "\n",
+    "In this lab, you'll run some of your own simulations to learn more about type 1 and type 2 errors. Remember that, the result of a statistical hypothesis test and the corresponding decision of whether to reject or accept the null hypothesis is not infallible. A test provides evidence for or against the null hypothesis and then you decide whether to accept or reject it based on that evidence, but the evidence may lack the strength to arrive at the correct conclusion. Incorrect conclusions made from hypothesis tests fall in one of two categories, i.e. [Type 1 and Type 2 erros](https://en.wikipedia.org/wiki/Type_I_and_type_II_errors) By running some of these simulations, you should have a better idea of why a 95% confidence level is often used for hypothesis testing.\n",
+    "\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "\n",
+    "* Explain why alpha = 0.05 is chosen as the cut off point for rejecting Null hypothesis in most scientific experiments\n",
+    "* Simulate Type I and Type II errors with alpha control to observe the output of an experiment\n",
+    "* Describe and differentiate between TYPE I and TYPE II errors\n",
+    "* Understand alpha and beta for representing false positive and false negative values"
    ]
   },
   {
@@ -442,8 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion\n",
-    "\n",
+    "## Summary\n",
     "The statstical key point here is that there is always a trade off between false positives and false negatives. By increasing alpha the number of false positives increases but the number of false negatives decreases as shown in bar graphs. The value of alpha=0.05 is considered a reasonable compromise between these two types of errors. Within the concept of “signifigance” there is embedded a trade-off between these two types of errors. \n",
     "\n",
     "> Think of “signifigance” as a compromise, between false positives and negatives, not as absolute determination."
