--- a/index.ipynb
+++ b/index.ipynb
@@ -561,7 +561,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "The statstical key point here is that there is always a trade off between false positives and false negatives. By increasing alpha the number of false positives increases but the number of false negatives decreases as shown in bar graphs. The value of alpha=0.05 is considered a reasonable compromise between these two types of errors. Within the concept of “signifigance” there is embedded a trade-off between these two types of errors. \n",
+    "The statistical key point here is that there is always a trade off between false positives and false negatives. By increasing alpha the number of false positives increases but the number of false negatives decreases as shown in bar graphs. The value of alpha=0.05 is considered a reasonable compromise between these two types of errors. Within the concept of “signifigance” there is embedded a trade-off between these two types of errors. \n",
     "\n",
     "> Think of “signifigance” as a compromise, between false positives and negatives, not as absolute determination."
    ]
