--- a/index.ipynb
+++ b/index.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Type 1 and Type 2 errors\n",
+    "# Type 1 and Type 2 errors - Lab\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Alpha and Beta\n",
+    "## Alpha and Beta\n",
     "\n",
     "**Alpha (α):** is the probability of a type I error i.e. finding a difference when a difference does not exist. \n",
     "\n",
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simulating Type I and II errors\n",
+    "## Simulating Type I and II errors\n",
     "\n",
     "### Type I error\n",
     "TYPE I error describes a situation where you reject the null hypothesis when it is actually true. This type of error is also known as a \"false positive\" or \"false hit\". The type 1 error rate is equal to the significance level α, so setting a higher confidence level (and therefore lower alpha) reduces the chances of getting a false positive."
@@ -451,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How alpha affects the prevalence of TYPE II errors.\n",
+    "## How alpha affects the prevalence of TYPE II errors.\n",
     "\n",
     "> **Exercise** Write a code similar to above except samples should be taken from two different populations. introduce a new variable to represent the difference between two poulations. The hypothesis test should, in most cases, reject the Null hypothesis as samples belong to different populations, except, in extreme cases where there is no significant difference between samples i.e. a TYPE II error (False Negatives). Code should reflect how rate of false negatives is affected by alpha. "
    ]
@@ -584,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
