--- a/index.ipynb
+++ b/index.ipynb
@@ -19,13 +19,8 @@
     "* Explain why alpha = 0.05 is chosen as the cut off point for rejecting Null hypothesis in most scientific experiments\n",
     "* Simulate Type I and Type II errors with alpha control to observe the output of an experiment\n",
     "* Describe and differentiate between TYPE I and TYPE II errors\n",
-    "* Understand alpha and beta for representing false positive and false negative values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Understand alpha and beta for representing false positive and false negative values\n",
+    "\n",
     "## Alpha and Beta\n",
     "\n",
     "**Alpha (α):** is the probability of a type I error i.e. finding a difference when a difference does not exist. \n",
@@ -34,13 +29,9 @@
     "\n",
     "**Beta (β):** is the probability of a type II error i.e. not detecting a difference when one actually exists. \n",
     "\n",
-    "Beta is directly related to study power (Power = 1 – β) which we shall see in the next lesson. Most medical literature uses a beta cut-off of 20% (0.2), indicating a 20% chance that a significant difference is missed. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Beta is directly related to study power (Power = 1 – β) which we shall see in the next lesson. Most medical literature uses a beta cut-off of 20% (0.2), indicating a 20% chance that a significant difference is missed. \n",
+    "\n",
+    "\n",
     "Let's try to simulate and visualize this phenomenon using some Python code."
    ]
   },
@@ -231,13 +222,8 @@
     "## Simulating Type I and II errors\n",
     "\n",
     "### Type I error\n",
-    "TYPE I error describes a situation where you reject the null hypothesis when it is actually true. This type of error is also known as a \"false positive\" or \"false hit\". The type 1 error rate is equal to the significance level α, so setting a higher confidence level (and therefore lower alpha) reduces the chances of getting a false positive."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "TYPE I error describes a situation where you reject the null hypothesis when it is actually true. This type of error is also known as a \"false positive\" or \"false hit\". The type 1 error rate is equal to the significance level α, so setting a higher confidence level (and therefore lower alpha) reduces the chances of getting a false positive.\n",
+    "\n",
     "\n",
     "\n",
     "### How alpha affects the prevalence of TYPE I errors.\n",
@@ -435,22 +421,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grouped data clearly shows that as value of alpha is increases from .001 to 0.5, the probability of TYPE I errors also increase.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Grouped data clearly shows that as value of alpha is increases from .001 to 0.5, the probability of TYPE I errors also increase.  \n",
+    "\n",
     "### Type II error \n",
     "\n",
-    "This error describes a situation where you fail to reject the null hypothesis when it is actually false. Type II error is also known as a \"false negative\" or \"miss\". The higher your confidence level, the more likely you are to make a type II error."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This error describes a situation where you fail to reject the null hypothesis when it is actually false. Type II error is also known as a \"false negative\" or \"miss\". The higher your confidence level, the more likely you are to make a type II error.\n",
+    "\n",
     "## How alpha affects the prevalence of TYPE II errors.\n",
     "\n",
     "> **Exercise** Write a code similar to above except samples should be taken from two different populations. introduce a new variable to represent the difference between two poulations. The hypothesis test should, in most cases, reject the Null hypothesis as samples belong to different populations, except, in extreme cases where there is no significant difference between samples i.e. a TYPE II error (False Negatives). Code should reflect how rate of false negatives is affected by alpha. "
@@ -553,13 +529,8 @@
     "* The risk of a Type I error (false positive) is REDUCED\n",
     "* Risk of a Type II error (false negative) is INCREASED\n",
     "\n",
-    "From above, we can see that in statistical hypothesis testing, the more we try and avoid a Type I error (false positive), the more likely a Type II error (false negative) will occur. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "From above, we can see that in statistical hypothesis testing, the more we try and avoid a Type I error (false positive), the more likely a Type II error (false negative) will occur. \n",
+    "\n",
     "## Summary\n",
     "\n",
     "The statistical key point here is that there is always a trade off between false positives and false negatives. By increasing alpha the number of false positives increases but the number of false negatives decreases as shown in bar graphs. The value of alpha=0.05 is considered a reasonable compromise between these two types of errors. Within the concept of “signifigance” there is embedded a trade-off between these two types of errors. \n",
@@ -584,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
