Add example dataframe

--- a/index.ipynb
+++ b/index.ipynb
@@ -699,28 +699,27 @@
     }
    ],
    "source": [
-    "# def type_2_error(population, population_2, num_tests, alpha_set):\n",
+    "def type_2_error(population, population_2, num_tests, alpha_set):\n",
     "    \n",
-    "#     \"\"\"\n",
-    "#     Parameters\n",
-    "#     ----------\n",
-    "#     population: ndarray\n",
-    "#         A random normal distribution\n",
-    "#     population_2: ndarray\n",
-    "#         A different random normal distribution\n",
-    "#     num_tests: int\n",
-    "#         The number of hypothesis tests to be computed\n",
-    "#     alpha_set: list\n",
-    "#         List of alpha levels\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    population: ndarray\n",
+    "        A random normal distribution\n",
+    "    population_2: ndarray\n",
+    "        A different random normal distribution\n",
+    "    num_tests: int\n",
+    "        The number of hypothesis tests to be computed\n",
+    "    alpha_set: list\n",
+    "        List of alpha levels\n",
     "    \n",
-    "#     Returns\n",
-    "#     ----------\n",
-    "#     sig_tests : DataFrame\n",
-    "#         A dataframe containing the columns 'type_2_error', 'p_value', and 'alpha'\n",
-    "#     \"\"\"\n",
-    "#     pass\n",
-    "\n",
-    "type_2_error(pop,pop2,1,alpha_set)"
+    "    Returns\n",
+    "    ----------\n",
+    "    sig_tests : DataFrame\n",
+    "        A dataframe containing the columns 'type_2_error', 'p_value', and 'alpha'\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "# Example dataframe for 1 test below"
    ]
   },
   {
