fixed learning objectives

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,10 +15,9 @@
     "\n",
     "You will be able to:\n",
     "\n",
-    "* Explain why alpha = 0.05 is chosen as the cutoff point for rejecting the null hypothesis in most scientific experiments\n",
-    "* Simulate Type I and Type II errors with alpha control to observe the output of an experiment\n",
-    "* Describe and differentiate between Type I and Type II errors\n",
-    "* Understand alpha and beta for representing false positive and false negative values\n",
+    "* Differentiate how Type I and Type II errors relate to the p and z-value\n",
+    "* Describe the relationship between alpha and Type I errors\n",
+    "* Create simulations and visualizations to represent scenarios involving Type I and Type II errors\n",
     "\n",
     "## Alpha and Beta\n",
     "\n",
@@ -715,6 +714,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
