fixed capitalization of word in lab title

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Type I and Type II errors - Lab\n",
+    "# Type I and Type II Errors - Lab\n",
     "\n",
     "## Introduction\n",
     "\n",
