--- a/index.ipynb
+++ b/index.ipynb
@@ -673,7 +673,7 @@
     "\n",
     "### Why is an α level of 0.05 chosen as a cut-off for statistical significance?\n",
     "\n",
-    "The $\\alpha$ level of 0.05 is considered s good balance to avoid excessive type I or type II errors. \n",
+    "The $\\alpha$ level of 0.05 is considered a good balance to avoid excessive type I or type II errors. \n",
     "\n",
     "\n",
     "If you decide to use a large value for alpha : \n",
