Fixed deprecation warnings
distplot to displot

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,7 @@
     "# Create a population with mean=100 and sd=20 and size = 1000\n",
     "pop = np.random.normal(100, 20, 1000)\n",
     "pop.dtype\n",
-    "sns.distplot(pop)"
+    "sns.displot(pop)"
    ]
   },
   {
@@ -121,7 +121,7 @@
     "# Create a population with mean=100 and sd=20 and size = 1000\n",
     "pop = np.random.normal(100, 20, 1000)\n",
     "pop.dtype\n",
-    "sns.distplot(pop)"
+    "sns.displot(pop)"
    ]
   },
   {
@@ -245,8 +245,8 @@
    "outputs": [],
    "source": [
     "plt.figure(\"Test Samples\")\n",
-    "sns.distplot(sample1, label='Sample1') \n",
-    "sns.distplot(sample2, label='Sample2')\n",
+    "sns.displot(sample1, label='Sample1') \n",
+    "sns.displot(sample2, label='Sample2')\n",
     "plt.legend()\n",
     "plt.show()\n"
    ]
@@ -294,8 +294,8 @@
    "source": [
     "# __SOLUTION__ \n",
     "plt.figure(\"Test Samples\")\n",
-    "sns.distplot(sample1, label='Sample1') \n",
-    "sns.distplot(sample2, label='Sample2')\n",
+    "sns.displot(sample1, label='Sample1') \n",
+    "sns.displot(sample2, label='Sample2')\n",
     "plt.legend()\n",
     "plt.show()\n"
    ]
